   > 6 months.

 * Issue #188: fix maximum recursion depth exceeded exception occurring if
   client quickly connects and disconnects data channel.

 * Issue #191: (FTPS) during SSL shutdown() operation the server can end up in
   an infinite loop hogging CPU resources.

 * Issue #199: UnixAuthorizer with require_valid_shell option is broken.

Major API changes since 0.6.0:

 * New FTPHandler.use_sendfile attribute.
    * sendfile() is now automatically used instead of plain send() if
      pysendfile module is installed.
 * FTPServer.serve_forever() is a classmethod.
 * AbstractedFS root and cwd properties can now be set via setattr().
 * New CallLater class.
 * New FTPHandler.on_login_failed(username, password) method.
 * New FTPHandler.logerror(msg) method.
 * New FTPHandler.log_exception(instance) method.


Version: 0.6.0 - Date: 2011-01-24
---------------------------------

Enhancements:

 * Issue #68: added full FTPS (FTP over SSL/TLS) support provided by new
   TLS_FTPHandler class defined in pyftpdlib.contrib.handlers module.

 * Issue #86: pyftpdlib now reports all ls and MDTM timestamps as GMT times,
   as recommended in RFC-3659.  A FTPHandler.use_gmt_times attributed has been
   added and can be set to False in case local times are desired instead.

 * Issue #124: pyftpdlib now accepts command line options to configure a stand
   alone anonymous FTP server when running pyftpdlib with python's -m option.

 * Issue #125: logs are now provided in a standardized format parsable by log
   analyzers. FTPHandler class provides two new methods to standardize both
   commands and transfers logging: log_cmd() and log_transfer().

 * Issue #127: added FTPHandler.masquerade_address_map option which allows you
   to define multiple 1 to 1 mappings in case you run a FTP server with
   multiple private IP addresses behind a NAT firewall with multiple public
   IP addresses.

 * Issue #128: files and directories owner and group names and os.readlink are